--- a/src/app/restaurent/pages/dish-items/dish-items.component.html
+++ b/src/app/restaurent/pages/dish-items/dish-items.component.html
@@ -1,5 +1,6 @@
   <div class="all-dish-items">
-    <div *ngIf="!itemList.length" ><img width="100%" src="assets/img/menuanime.gif"></div>
+    <div *ngIf="!itemList.length" fxHide.lg fxHide.md fxHide.xl><img width="100%" src="assets/img/menuanime.gif"></div>
+    <div *ngIf="!itemList.length"  fxHide.sm fxHide.xs><img  src="assets/img/menuanime.gif"></div>
   <div *ngFor="let item of itemList; let i = index" class="dish-items" id="{{item.customId}}">
     <div class="title d-flex align-items-center justify-content-between">
       <div class="card-title">{{item.CatName}}</div>
