--- a/src/app/restaurent/pages/thankyou/thankyou.component.html
+++ b/src/app/restaurent/pages/thankyou/thankyou.component.html
@@ -93,6 +93,7 @@
 			</div>
 
 			<div id="capture" class="modal-body text-center">
+				<div *ngIf="orderData.ServiceId != 5">
 				<div  *ngFor="let ngo of locationDetails.ngo">
 				<img *ngIf="ngo.RecId == orderData.NGOId" [src]="ngo.Photo" class="img-fluid">
 				<p *ngIf="ngo.RecId == orderData.NGOId" class="text-center">
@@ -103,6 +104,7 @@
 					<div id="output"></div>
 					<!-- <button *ngIf="ngo.RecId == orderData.NGOId" class="btn btn-site" (click)="share(ngo.Photo, '      With your help our platform improves the well being of your community. You can enjoy ordering food online and help the community as well. Thank you for choosing Organization' + orderData.NGOName + '.' +  locationDetails.Name +' will contribute $1 towards Organization' + orderData.NGOName + '.')" >Share & Join our Community</button> -->
 					
+				</div>
 				</div>
 
 				<div class="timeline py-4">
