--- a/src/app/restaurent/pages/payment/cards/cards.component.html
+++ b/src/app/restaurent/pages/payment/cards/cards.component.html
@@ -34,7 +34,7 @@
         {{error1?.message}}
       </div>
   <div class="link pt-3">
-    <button class="btn btn-primary btn-site btn-block rounded-0" (click)="getCardToken()"  [disabled]="flags.placeorderButton == true">Place Order</button>
+    <button class="btn btn-primary btn-site btn-block rounded-0" (click)="getCardToken()"  [disabled]="flags.placeorderButton == true">Place Orderr</button>
   </div>
 </form>
 
