--- a/src/styles.scss
+++ b/src/styles.scss
@@ -125,11 +125,11 @@ a {
 
 button {
   &.btn {
-    font-size: 14px;
-    text-transform: capitalize;
-    font-weight: 500;
-    padding-top: 12px;
-    padding-bottom: 12px;
+    // font-size: 14px;
+    // text-transform: capitalize;
+    // font-weight: 500;
+    // padding-top: 12px;
+    // padding-bottom: 12px;
   }
 
   &.btn-site {
@@ -166,7 +166,7 @@ button {
   }
 }
 .btn, .form-control{
-  min-height: 44px;
+  // min-height: 44px;
 }
 /****** Header Styling ******/
 header {
