--- a/src/app/restaurent/base-layout/body/body.component.html
+++ b/src/app/restaurent/base-layout/body/body.component.html
@@ -1,6 +1,6 @@
 <nb-layout>
   <nb-layout-header fixed>
-    <!--<button data-toggle="modal" data-backdrop="false" data-target="#thankyou">show</button>-->
+    <!-- <button data-toggle="modal" data-backdrop="false" data-target="#thankyou">show</button> -->
 <!-- Modal -->
 <div class="modal fade thankyou show" id="thankyou">
 	<div class="modal-dialog" role="document">
@@ -8,55 +8,29 @@
 
 			
 
-			<div class="modal-body text-center">
+			<div class="modal-body text-center" style="min-height: 96vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-between;">
 				
-        <div class="row">
-          <div class="col-lg-12 text-left text-dark mb-0 h2 font-weight-boldest">Thanks for your order!</div>
-          <div class="col-lg-12 text-dark d-flex align-items-center justify-content-between mb-4">
-            <p class="mb-0"><span class="text-muted">Order ID:</span> 123456789</p>
-            <p class="mb-0"><small>Amount:</small><span class="font-weight-bold">345</span><small>.00</small></p>
+        <div class="row text-center">
+          <div class="col-lg-12 text-center mt-3">
+            <img src="assets/img/thankyou.png" class="img-fluid mb-3">
           </div>
-          <div class="col-lg-12 font-weight-bold text-left">Order Ready In: 15 MIN</div>
+          <div class="col-lg-12 text-dark mb-0 h5 font-weight-bold mb-3">Thanks for your order!</div>
+          <div class="col-lg-12">
+            <p class="text-dark mb-0">Your total order amount is: <span class="font-weight-bold text-dark mb-0">$12.34</span></p>
+            <p class="text-dark">Your order number is: <span class="font-weight-bold text-dark">123456789</span></p>
+            <!-- <p class="text-success">We will bring food to your table <span class="font-weight-bold">#32</span> when ready.</p> -->
+          </div>
+          <div class="col-lg-12 d-flex aling-items-center bg-light p-3 mb-5">
+            <input type="text" class="form-control mr-2" placeholder="Enter Email for Order Receipt">
+            <button class="btn btn-dark px-3" type="submit">Submit</button>
+          </div>
+        
         </div>
-				<div class="timeline py-4">
-					<ul>
-						<li class="active">
-							<div class="d-flex align-items-center text-left">
-								<div class="icon mr-2"><img src="assets/images/img-1.svg"></div>
-								<div class="content">
-									<div class="h6 mb-0">Order Placed</div>
-									<p class="mb-0">Your order placed successfully</p>
-								</div>
-							</div>
-						</li>
-						<li class="active">
-							<div class="d-flex align-items-center text-left">
-								<div class="icon mr-2"><img src="assets/images/img-2.svg"></div>
-								<div class="content">
-									<div class="h6 mb-0">Order Processed</div>
-									<p class="mb-0">We are preparing your order.</p>
-								</div>
-							</div>
-						</li>
-						<li>
-							<div class="d-flex align-items-center text-left">
-								<div class="icon mr-2"><img src="assets/images/img-3.svg"></div>
-								<div class="content">
-									<div class="h6 mb-0">Order Ready</div>
-									<p class="mb-0">We will call your Name OR bring the food to your table when it's ready</p>
-								</div>
-							</div>
-						</li>
-					</ul>
-				</div>
-				<div class="text-center col-lg-12 py-3">
-					<div class="icon">
-						<img src="assets/img/smile.svg" class="img-fluid">
-					</div>
-          <div class="h3 text-dark">Thank You</div>
-          
-        </div>
-        <button class="btn btn-dark btn-block rounded-0" data-dismiss="modal">Start New Order</button>
+			  <button class="btn btn-dark btn-block rounded-0" data-dismiss="modal">Start New Order</button>
 			</div>
 			
 		</div>
