--- a/src/app/restaurent/pages/register/register.component.html
+++ b/src/app/restaurent/pages/register/register.component.html
@@ -16,9 +16,9 @@
                 <p class="text-danger mb-0">One Time Password Sent to {{signUpBody.data.customerData.eMail}}</p>
               </label>
             </div>
-            <button class="btn btn-success btn-block mt-3" [disabled]="otp.invalid || flags.isOtpVerified" (click)="verify()">{{flags.isOtpVerified?'Hold On...':'Verify Otp'}}</button>
-            <button class="btn btn-success btn-block mt-3"  (click)="goback()">Go Back</button>
-            <button class="btn btn-success btn-block mt-3"  (click)="ResendsendOtp()">Resend Otp</button>
+            <button class="btn btn-success btn-block mt-3 d-flex align-items-center justify-content-center" [disabled]="otp.invalid || flags.isOtpVerified" (click)="verify()"><span class="spinner-border spinner-border-sm text-light mr-2"></span> {{flags.isOtpVerified?'Hold On...':'Verify Otp'}}</button>
+            <button class="btn btn-success btn-block mt-3 d-flex align-items-center justify-content-center"  (click)="goback()">Go Back</button>
+            <button class="btn btn-success btn-block mt-3 d-flex align-items-center justify-content-center"  (click)="ResendsendOtp()"><span class="spinner-border spinner-border-sm text-light mr-2"></span> Resend Otp</button>
            
           </form>
           <!-- Form -->
@@ -71,7 +71,7 @@
             
             
 
-            <button *ngIf="!flags.isOtpSent" matRipple class="btn btn-success btn-block mt-3"  (click)="sendOtp()">{{flags.isRegister?'Hold On...':'Sign Up'}}</button>
+            <button *ngIf="!flags.isOtpSent" matRipple class="btn btn-success btn-block mt-3 d-flex align-items-center justify-content-center"  (click)="sendOtp()"><span class="spinner-border spinner-border-sm text-light mr-2"></span> {{flags.isRegister?'Please wait...':'Sign Up'}}</button>
 
             
           </form>
