--- a/src/app/restaurent/pages/checkout/checkout.component.html
+++ b/src/app/restaurent/pages/checkout/checkout.component.html
@@ -851,13 +851,13 @@
           <div class="container">
             <div class="row">
               <div  class="col-md-12">
-                <div class="section-content1 ">
+                <div class="section-content1 border p-1 rounded ">
                   <div class="d-flex align-items-center">
-                    <div class="d-flex align-items-center border mr-2 col-lg-12 px-0">
-                      <span class="mr-2"><nb-icon icon="layers-outline"></nb-icon></span>
-                      <input type="text" class="form-control" name="table" (keyup)="tableF($event.target.value)" placeholder="Enter Your Table Number OR Name">
+                    <div class="d-flex align-items-center col-lg-12 px-0">
+                      <span class="mr-02"><nb-icon icon="layers-outline"></nb-icon></span>
+                      <input type="text" class="form-control form-control-sm" name="table" (keyup)="tableF($event.target.value)" placeholder="Enter Your Table Number OR Name">
                     </div>
-                    <button class="btn btn-success">Submit</button>
+                    <button class="btn btn-success btn-sm">Submit</button>
                   </div>
                 </div>
               </div>
