--- a/src/app/restaurent/pages/checkout/checkout.component.scss
+++ b/src/app/restaurent/pages/checkout/checkout.component.scss
@@ -1662,7 +1662,7 @@ overflow: auto;
   .suggestion-box, .table-book{
     textarea, .form-control{
       font-size: .8rem;
-      padding: 5px 0;
+      // padding: 5px 0;
       outline: 0;
       resize: none;
       white-space: nowrap;
