--- a/src/app/restaurent/base-layout/body/body.component.html
+++ b/src/app/restaurent/base-layout/body/body.component.html
@@ -1,6 +1,6 @@
 <nb-layout>
   <nb-layout-header fixed>
-    <!-- <button data-toggle="modal" data-backdrop="false" data-target="#thankyou">show</button> -->
+    <button data-toggle="modal" data-backdrop="false" data-target="#thankyou">show</button>
 <!-- Modal -->
 <div class="modal fade thankyou show" id="thankyou">
 	<div class="modal-dialog" role="document">
@@ -16,7 +16,7 @@
 				
         <div class="row text-center">
           <div class="col-lg-12 text-center mt-3">
-            <img src="assets/img/thankyou.png" class="img-fluid mb-3">
+            <img src="assets/img/thankyou.gif" class="img-fluid mb-3">
           </div>
           <div class="col-lg-12 text-dark mb-0 h5 font-weight-bold mb-3">Thanks for your order!</div>
           <div class="col-lg-12">
