--- a/src/app/restaurent/pages/payment/cards/cards.component.html
+++ b/src/app/restaurent/pages/payment/cards/cards.component.html
@@ -24,7 +24,7 @@
       </div>
     </div>
     <div class="link pt-3" >
-      <button class="btn btn-primary btn-site btn-block rounded-0" (click)="placeOrder()"  [disabled]="!paymentFormOne.valid">Place Order</button>
+      <button style="background-color: #28a745;border-color: #28a745; " class="btn btn-primary btn-site btn-block rounded-0" (click)="placeOrder()"  [disabled]="!paymentFormOne.valid">Place Order </button>
     </div>
   </form>
 
@@ -34,7 +34,7 @@
         {{error1?.message}}
       </div>
   <div class="link pt-3">
-    <button class="btn btn-primary btn-site btn-block rounded-0" (click)="getCardToken()"  [disabled]="flags.placeorderButton == true">Place Orderr</button>
+    <button style="background-color: #28a745;border-color: #28a745; " class="btn btn-primary btn-site btn-block rounded-0" (click)="getCardToken()"  [disabled]="flags.placeorderButton == true"><span *ngIf="flags.placeorderButton == true" class="spinner-border spinner-border-sm text-light mr-2"></span> {{flags.placeorderButton == true?'Please Wait...':'Place Order'}}</button>
   </div>
 </form>
 
@@ -110,7 +110,7 @@
 
     <div class="link pt-3">
       <!-- <button *ngIf="locationDetails.PaymentProviderStripe == 'T'" class="btn btn-primary btn-site btn-block rounded-0" (click)="getCardToken()" [disabled]="flags.placeorderButton == true" >Place Order</button> -->
-      <button *ngIf="locationDetails.PaymentProviderStripe == 'F'" class="btn btn-primary btn-site btn-block rounded-0" (click)="placeOrder()" [disabled]="!paymentFormTwo.valid" >Place Order</button>
+      <button style="background-color: #28a745; border-color: #28a745; " *ngIf="locationDetails.PaymentProviderStripe == 'F'" class="btn btn-primary btn-site btn-block rounded-0" (click)="placeOrder()" [disabled]="!paymentFormTwo.valid" >Place Order </button>
     </div>
   </form>
  
