--- a/src/app/restaurent/pages/dish-items/dish-items.component.html
+++ b/src/app/restaurent/pages/dish-items/dish-items.component.html
@@ -24,7 +24,7 @@
                   <nb-icon icon="info"></nb-icon>
                 </a>
                 <!--<img src="assets/images/dummy.png" alt="Card image">-->
-                <img   [defaultImage]="'assets/images/dummy.png'" lazyLoad="{{imageUrl}}images/menuitemimages/{{data.Img}}" onError="this.src='assets/images/dummy.png'">
+                <img   [defaultImage]="'assets/images/dumm.png'" lazyLoad="{{imageUrl}}images/menuitemimages/{{data.Img}}" onError="this.src='assets/images/dumm.png'">
               </div>
               <div class="card-body">
                 <div class="">
