--- a/src/app/restaurent/pages/thankyou/thankyou.component.html
+++ b/src/app/restaurent/pages/thankyou/thankyou.component.html
@@ -200,7 +200,7 @@
 					   </div>
 
 				   </div>
-				   <button class="btn btn-dark btn-block rounded-0" ><a href="{{host}}/{{country}}/{{mobUrl}}#dinein" style="color: white">Start New Order</a></button>
+				   <a href="{{host}}/{{country}}/{{mobUrl}}#dinein" style="color: white"><button class="btn btn-dark btn-block rounded-0" >Start New Order</button></a>
 			   </div>
 
 		   </div>
